--- a/about/index.html
+++ b/about/index.html
@@ -432,6 +432,9 @@ JAVA
   </a>
 </div>
 
+<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+
         
 
         
